<resources>
    <string name="app_name">HackathonFramework</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_pets">My Pets</string>
    <string name="title_settings">Settings</string>
    <string name="title_more">More</string>

    <string name="text_dashboard_health">Health</string>
    <string name="text_dashboard_profile">Pet Profile</string>
    <string name="text_dashboard_goals">Goals</string>
    <string name="text_dashboard_activity">Activities</string>
    <string name="text_dashboard_balance">Balance/Battery</string>
    <string name="text_dashboard_market">Marketplace</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Shared-Preferences
    <string name="user_preference">com.example.fetchcoins.USER_INFORMATION</string>
    <string name="user_preference_token">token</string>
    <string name="user_preference_email">email</string>
    <string name="pet_preference">selected_pet</string>
    <string name="pet_preference_name">name</string>
    <string name="pet_preference_id">petId</string>

    //API
    <string name="api_base_url">https://local-fetch-server.herokuapp.com</string>
    <string name="api_user_info">/users/info</string>
    <string name="api_user_update">/users/update/info</string>
    <string name="api_pet_dog_breed">/pets/dogs/breed/all</string>
    <string name="api_pet_cat_breed">/pets/cats/breed/all</string>
    <string name="api_pet_create">/pets/create</string>
    <string name="api_pet_info">/pets/info</string>
    <string name="api_pet_update_info">/pets/update/info</string>
    <string name="api_user_pets">/users/pets</string>
    <string name="api_user_first_pet">/users/pets/first</string>
    <string name="api_user_instance_id">/users/instance-token</string>
    <string name="api_user_location">/users/loc-update</string>

    //User info
    <string name="user_profile_display_name_hint">Display Name</string>
    <string name="user_profile_email_hint">Email</string>
    <string name="user_profile_mobile_hint">Mobile</string>
    <string name="user_profile_carrier_hint">Carrier</string>
    <string name="user_profile_address_hint">Address</string>
    <string name="user_profile_country_hint">Country</string>
    <string name="user_profile_city_hint">City</string>
    <string name="user_profile_state_hint">State</string>
    <string name="user_profile_zip_code_hint">Zip Code</string>
    <string name="user_profile_country_code_hint">Country Code</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_pet_registration">PetRegistration</string>

    //Registration
    <string name="profile_text_hint">Type Here</string>
    <string name="pet_profile_name_hint">Pet Name</string>
    <string name="profile_button_next">CONFIRM</string>
    <string name="pet_profile_breed_hint">Breed</string>
    <string name="pet_profile_type_hint">Pet Type</string>
    <string name="pet_profile_gender_hint">Gender</string>
    <string name="pet_profile_age_hint">Age (in years)</string>
    <string name="pet_profile_weight_hint">Weight</string>
    <string name="pet_profile_birth_hint">Birthday</string>
    <string name="pet_profile_spayed_hint">Spayed/Neutered</string>

    //Systems alert
    <string name="ble_not_supported">Bluetooth is not enabled on your device.</string>
</resources>
