<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_activity_dashboard"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_pets"
        android:icon="@drawable/ic_dog_black_24dp"
        android:title="@string/title_pets" />

    <item
        android:id="@+id/navigation_recording"
        android:icon="@drawable/ic_baseline_radio_checked_24dp"
        android:title="Record" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_indicator_black_24dp"
        android:title="@string/title_more" />


</menu>
